# spending-tracker

./: .gitignore  pyproject.toml
api/: main.py  run
api/app/: config.py  dependencies.py  deps.py  enrichment.py  file_storage.py  filters.py  jobs.py  main.py  orchestration.py  parsers.py  project_types.py  transactions.py  transformation.py
api/app/db/: jobs.py  transactions.py
api/app/parsers/: core.py  registry.py  revolut.py  swedbank.py
app/: config.py  enrichment.py  filters.py  main.py  orchestration.py  project_types.py
app/db/: jobs.py  transactions.py
app/parsers/: registry.py  revolut.py  swedbank.py
tests/: test_1.py
