[project]
name = "spending-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.5",
    "openpyxl>=3.1.5",
    "psycopg2>=2.9.11",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "supabase>=2.25.0",
    "uvicorn>=0.38.0",
]
