[project]
name = "spending-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "currencyconverter>=0.18.13",
    "fastapi[standard]>=0.123.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "psycopg2>=2.9.11",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "supabase>=2.25.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
