[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spending-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "currencyconverter>=0.18.13",
    "fastapi[standard]>=0.123.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "supabase>=2.25.0",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "types-openpyxl>=3.1.5.20250919",
]

[tool.pytest]
testpaths = ["tests"]